# nebula

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_ja.md  Taskfile.yml  capture_sim.py  perf_sim.py
.github/actions/setup-vulkan/: action.yml
.github/workflows/: ci.yml  perf-baseline.yml  perf.yml
assets/: bunny_sb.sb  cow_obstacle.stl  cube_sb.sb  sphere_obstacle.stl
benchmarks/: baseline.json
cmake/: patch_pnanovdb.py
docs/: solver_advancement_roadmap.md  vbd_feasibility.md
docs/prototypes/: vbd_vs_xpbd.py
examples/: cloth_3d.cpp  cloth_scene.cpp  fluid_absorb.cpp  fluid_pbf.cpp  fluid_sphere.cpp  fluid_wave_foam.cpp  mpm_avalanche.cpp  mpm_elastic.cpp  mpm_fountain.cpp  mpm_geolayer.cpp  mpm_granular.cpp  mpm_multimaterial.cpp  mpm_snow_impact.cpp  mpm_stl_drop.cpp  multi_physics.cpp  pyro_basic.cpp  pyro_cow_blast.cpp  pyro_explosion.cpp  pyro_sweep_bench.cpp  screw_fluid.cpp  smoke.cpp  string_2d.cpp  utils.hpp  xpbd_softbody.cpp
shaders/: cloth.frag  cloth.vert  collider_common.glsl  common.glsl  coupling_cloth.comp  fluid.frag  fluid_absorb.comp  fluid_lifetime.comp  fluid_particle.vert  fluid_particle_wave.vert  foam.frag  foam_particle.vert  foam_particle_wave.vert  force_common.glsl  force_noise.glsl  hash_add_base.comp  hash_count.comp  hash_scan_global.comp  hash_scan_local.comp  hash_sort.comp  move_pins.comp  mpm_common.glsl  mpm_g2p.comp  mpm_grid_update.comp  mpm_hash_count.comp  mpm_hash_sort.comp  mpm_nanovdb_bc.comp  mpm_nanovdb_common.glsl  mpm_p2g.comp  mpm_zero_grid.comp  particle.vert  pbf_delta_p.comp  pbf_density.comp  pbf_foam_advect.comp  pbf_foam_generate.comp  pbf_viscosity.comp  pbf_vorticity_force.comp  pbf_vorticity_omega.comp  predict.comp  predict_sdf.comp  (+26 more)
src/: App.cpp  App.h  CMakeLists.txt  VkSafeAlloc.mm
src/core/: AttributeBuffer.cpp  AttributeBuffer.h  Collider.h  ComputePipeline.cpp  ComputePipeline.h  DefineShaderCompiler.cpp  DefineShaderCompiler.h  Domain.h  Emitter.h  Force.h  ForceShaderCompiler.cpp  ForceShaderCompiler.h  MPMSimPC.h  MaterialParams.h  MeshSDF.h  PyroSimPC.h  PyroSource.h  SimPC.h  VulkanContext.cpp  VulkanContext.h  source.h
src/engine/: BoundaryParticles.cpp  BoundaryParticles.h  ClothConstraint.h  ClothMesh.cpp  ClothMesh.h  ClothSceneEngine.cpp  ClothSceneEngine.h  EngineBase.cpp  EngineBase.h  FluidEngine.cpp  FluidEngine.h  MPMEngine.cpp  MPMEngine.h  MultiPhysicsEngine.cpp  MultiPhysicsEngine.h  PyroEngine.cpp  PyroEngine.h  SimulationEngine.cpp  SimulationEngine.h  SoftBodyEngine.cpp  SoftBodyEngine.h
src/graphics/: ClothRenderer.cpp  ClothRenderer.h  GraphicsPipeline.cpp  GraphicsPipeline.h
tests/: CMakeLists.txt  main.cpp  test_attribute_buffer.cpp  test_domain.cpp  test_fluid.cpp  test_mpm.cpp  test_pbf.cpp  test_pbf_fluid.cpp  test_pbf_foam.cpp  test_pyro.cpp  test_string2d.cpp  test_string3d.cpp
tests/helpers/: HeadlessCtx.cpp  HeadlessCtx.h  MPMHarness.cpp  MPMHarness.h  PBFHarness.cpp  PBFHarness.h  PhysicsHarness.cpp  PhysicsHarness.h  VkWrapper.mm
tools/: compare_bench.py  format.py  gen_cow_stl.py  gen_softbody.py  gen_sphere_stl.py  gen_terrain_stl.py  pyro_raymarch.py
